--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "type": "tsc --noEmit"
+    "lint": "biome check",
+    "format": "biome format --write",
+    "fix": "biome check --write",
+    "type-check": "biome type"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
@@ -19,14 +21,12 @@
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.8",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.6",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
